代码模块化

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </blockquotes>
   <ul>
     <li><a href="/src/0.getting-started/">起步 | Getting started</a></li>
-    <li><a href="/src/1.display-a-work/">展示空间 | Display a work</a></li>
+    <li><a href="/src/1.displaying-work/">展示空间 | Displaying work</a></li>
     <li><a href="/src/2.knowing-state/">改变视角 | Knowing state</a></li>
     <li><a href="/src/3.recording-state/">状态录制 | Recording state</a></li>
     <li><a href="/src/4.points-in-3d/">三维中的点 | Points in 3d</a></li>
